date in chat  spacing solved

--- a/src/Components/PostItem/styles.css
+++ b/src/Components/PostItem/styles.css
@@ -62,3 +62,10 @@
 .DateItem {
     text-align: center;
 }
+
+.PostItem::after {
+    clear: both;
+    content: " ";
+    display: block;
+    visibility: hidden;
+}
